--- a/Templates/index.html
+++ b/Templates/index.html
@@ -1,53 +1,9 @@
-<html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
-    <title>Activity Recomender</title>
-  </head>
-  <body>
-    <div class="container" id="container">
-      <div>
-      {% with messages = get_flashed_messages() %}
-        {% if messages %}
-          <ul class="alert alert-success" role="alert">
-          {% for message in messages %}
-            <li>{{ message }}</li>
-          {% endfor %}
-          </ul>
-        {% endif %}
-      {% endwith %}
-      </div>
-      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
+{% extends 'base.html' %}
+{% from 'bootstrap/form.html' import render_form %}
 
-      <div class="my-3"><h1>MHC Activity Recommender</h1>
-        <p><a href="/init">Create db</a></p>
-        <p><a href="/pref">Set Features</a></p>
-        <p><a href="/recommendations">Get Recommendations</a></p>
-        {% if recommendations %}
-          <article class="my-3">
-            <h3>Recommendations</h3>
-            <div class="row  row-cols-1 row-cols-md-2 g-4">
-            {% for recommendation in recommendations %}
-              <div class="col">
-                <div class="card">
-                   <iframe width="560" height="315"
-                        src="{{ recommendation.url }}"
-                      title="YouTube video player" frameborder="0"
-                      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                      allowfullscreen></iframe>
-                  <div class="card-body">
-                    <h5 class="card-title">Recommendation {{ loop.index }}</h5>
-                    <p class="card-text">Hash = {{recommendation.hash}}. <a href="{{ recommendation.url }}">link</a></p>
-                      <a href="" class="btn btn-primary">Add rating</a>
-                  </div>
-                </div>
-              </div>
-            {% endfor %}
-            </div>
-          </article>
-        {% endif %}
-      </div>
-    </div>
-  </body>
-</html>
+{% block content %}
+    <h1>MHC Activity Recommender</h1>
+    <p><a href="/init">Create db</a></p>
+    <p><a href="/pref">Set Features</a> or fill out {{ render_form(userForm, action=url_for("pref") ) }}</p>
+    <p><a href="/recommendations">Get Recommendations</a></p>
+{% endblock %}
