--- a/Templates/recommendations.html
+++ b/Templates/recommendations.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% from 'bootstrap/form.html' import render_form %}
 
 {% block content %}
 <div class="my-3">
@@ -19,7 +20,7 @@
               <div class="card-body">
                 <h5 class="card-title">Recommendation {{ loop.index }}</h5>
                 <p class="card-text">Hash = {{recommendation.hash}}. <a href="{{ recommendation.url }}">link</a></p>
-                  <a href="{{ url_for('rate', hash = recommendation.hash ) }}" class="btn btn-primary">Add rating</a>
+                {{ render_form(recommendation.ratingForm, action=url_for('rate', hash = recommendation.hash ) ) }}
               </div>
             </div>
           </div>
